# VMPSelf

./: .gitignore  CMakeLists.txt  README.md  新建文本文档.txt
client/: CMakeLists.txt  README.md
client/include/app/: MainWindow.h  SettingsDialog.h
client/include/core/auth/: AuthClient.h
client/include/core/driver/: DriverBridge.h
client/include/core/pe/: PEParser.h
client/include/core/pipeline/: ProtectionPassManager.h
client/include/core/util/: Logger.h  SettingsManager.h
client/include/core/vm/: VirtualMachine.h
client/src/: main.cpp
client/src/app/: MainWindow.cpp  SettingsDialog.cpp
client/src/core/auth/: AuthClient.cpp
client/src/core/driver/: DriverBridge.cpp
client/src/core/pe/: PEParser.cpp
client/src/core/pipeline/: ProtectionPassManager.cpp
client/src/core/util/: Logger.cpp  SettingsManager.cpp
client/src/core/vm/: VirtualMachine.cpp
client/tests/: CMakeLists.txt  main.cpp  pe_parser_tests.cpp  settings_manager_tests.cpp
client/tests/include/gtest/: gtest.h
docs/: admin_portal_detailed_design.md  technical_plan.md
docs/deployment/: winserver2012.md
docs/design/: license_card_types.md
server/: .env.example  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  README.md  alembic.ini  cmake_install.cmake  manage.py  pytest.ini  requirements.txt
server/Testing/Temporary/: CTestCostData.txt
server/alembic/: env.py
server/alembic/versions/: 20251010_initial_schema.py  20251018_split_slot_current_package.py  20251019_add_cdn_deployment_stage_logs.py  20251019_add_cdn_endpoint_ports.py  20251019_add_cdn_health_and_deployments.py  20251019_add_cdn_sudo_password.py  20251019_add_license_batches.py  20251019_add_license_slot_fk.py  20251019_add_proxy_protocol_flag.py  20251019_add_rbac_roles.py  20251019_extend_audit_logs.py  20251019_extend_cdn_endpoints.py  20251019_merge_cdn_license_heads.py  20251020_add_access_rules.py  20251020_add_slot_secrets.py
server/app/: main.py  schemas.py
server/app/api/: admin.py  routes.py
server/app/api/admin_portal/: __init__.py  cdn.py  common.py  dashboard.py  license_types.py  licenses.py  settings.py  software.py  users.py
server/app/api/admin_portal/api/: __init__.py  license_types.py  licenses.py  users.py
server/app/api/admin_portal/common_components/: __init__.py  auth.py  constants.py  contexts.py  serializers.py
server/app/api/public/: __init__.py  health.py  licenses.py  software.py  users.py
server/app/core/: crypto.py  ip_access.py  settings.py
server/app/db/: __init__.py  models.py  session.py
server/app/middleware/: access_control.py  cdn_guard.py
server/app/schemas/: __init__.py  admin.py  public.py
server/app/services/: __init__.py  access_control.py  admin_user_service.py  audit_service.py  auto_blacklist.py  card_type_service.py  license_service.py  role_service.py  security.py  software_service.py  user_service.py
server/app/services/accounts/: __init__.py  admin.py  roles.py
server/app/services/audit/: __init__.py  service.py
server/app/services/cdn/: __init__.py  config.py  deployer.py  health.py  monitor.py  service.py
server/app/services/licensing/: __init__.py  card_types.py  licenses.py  software.py
server/app/templates/admin/: card_types.html  layout.html  license_detail.html  licenses.html  user_detail.html  users.html
server/app/templates/admin/card_types/: index.html
server/app/templates/admin/cdn/: index.html
server/app/templates/admin/dashboard/: index.html
server/app/templates/admin/licenses/: batch_detail.html  batches.html  detail.html  index.html
server/app/templates/admin/partials/: flash_messages.html  sidebar.html
server/app/templates/admin/settings/: index.html
server/app/templates/admin/software/: index.html
server/app/templates/admin/users/: detail.html  index.html
server/client/: CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake  vmp_shell.ilk
server/client/tests/: CTestTestfile.cmake  client_tests[1]_include.cmake  client_tests[1]_tests.cmake  cmake_install.cmake
server/client/vmp_shell_autogen/: mocs_compilation.cpp
server/client/vmp_shell_autogen/GGI6BHYEYF/: moc_AuthClient.cpp
server/client/vmp_shell_autogen/KTF6LCBHT5/: moc_MainWindow.cpp  moc_SettingsDialog.cpp
server/data/: cdn_origin_whitelist.txt
server/lib/: gtest_main.lib
server/server/: CTestTestfile.cmake  cmake_install.cmake
server/tests/: conftest.py  test_access_control.py  test_admin_api_crud.py  test_admin_modules.py  test_admin_service.py  test_cdn_deploy.py  test_cdn_deployer.py  test_cdn_guard.py  test_cdn_service.py  test_license_flow.py  test_offline.py  test_ping.py  test_public_endpoints.py  test_user_registration.py
server/tools/: cdn_deploy_config.example.json  deploy_cdn.py  winserver2012_deploy.ps1
